--- a/ECOS/App.xaml
+++ b/ECOS/App.xaml
@@ -2,8 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ECOS"
-             StartupUri="MainWindow.xaml">
+             xmlns:vm ="clr-namespace:ECOS.ViewModel"
+             xmlns:conv ="clr-namespace:ECOS.Converter"
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+        <vm:ViewModelLocator x:Key="Locator"/>
+        <conv:BoolToVisibilityConverter x:Key="BoolToVis"/>
+        <conv:IsNotNullConverter x:Key="NotNull"/>
     </Application.Resources>
 </Application>
